Define image more explicitly

--- a/app/views/browser_users/_how_it_works.html.slim
+++ b/app/views/browser_users/_how_it_works.html.slim
@@ -3,17 +3,17 @@
     h3 How it works
   .d-flex
     .how-it-works--step-image
-      = image_tag("step_1", width: 32, height: 32)
+      = image_tag("step_1.png", width: 32, height: 32)
     .how-it-works--step-description
       p Send your unique referral link below to your friends & family to download and install the Brave browser.
   .d-flex
     .how-it-works--step-image
-      = image_tag("step_2", width: 32, height: 32)
+      = image_tag("step_2.png", width: 32, height: 32)
     .how-it-works--step-description
       p If they actively use the Brave browser for 30+ days, you will receive up to 10 BAT. See details for different rates.
   .d-flex
     .how-it-works--step-image
-      = image_tag("step_3", width: 32, height: 32)
+      = image_tag("step_3.png", width: 32, height: 32)
     .how-it-works--step-description
       p Come visit this page to check your referral progress. Your bonus will be paid out on the 8th of every month.
   hr
