--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -14,6 +14,9 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
     class: 'title' \
   )
 
+  - if @publisher.merchant?
+    .mr-5= link_to(t('.merchant'), keys_path)
+
   = render partial: "choose_channel_button"
   = link_to("#{t "shared.instant_donation"}", "#", data: { "js-confirm-with-modal": "instant-donation-modal" }, class: 'btn btn-secondary btn-highlight', id: 'instant-donation-button')
 
