--- a/app/assets/stylesheets/pages/browser_user_home.scss
+++ b/app/assets/stylesheets/pages/browser_user_home.scss
@@ -70,9 +70,25 @@
     font-family: 'Poppins-Regular', sans-serif;
   }
 }
+
+.no-padding {
+  padding-top: 0px!important;
+  padding-bottom: 0px!important;
+}
+
 button.share-promo-button {
   font-family: 'Poppins-Regular', sans-serif;
   color: #ffffff;
   width: 55px;
+  margin: 0px;
+  height: 100%;
+  border-radius: 4px;
   background: rgba(255, 255, 255, 0.34);
+  border-width: 0px;
+}
+
+.tos-link {
+  font-family: 'Poppins-Regular', sans-serif;
+  color: #ffffff;
+  text-decoration: underline;
 }
