--- a/app/views/admin/publishers/show.html.slim
+++ b/app/views/admin/publishers/show.html.slim
@@ -46,7 +46,7 @@ hr
           .db-info-row
             .db-field = "Created by:"
             .db-value = link_to @publisher.created_by, admin_publisher_path(@publisher.created_by)
-        - ActiveRecord::Base.connected_to(role: :secondary)
+        - ActiveRecord::Base.connected_to(role: :readonly)
           - if @publisher.promo_enabled_2018q1
             .db-info-row
               .db-field = "Referral downloads:"
