--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -20,6 +20,8 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
 
 = hidden_field_tag 'publisher_id', @publisher.id
 
+#welcomeModal data-props="#{ { isOpen: new_publisher?(@publisher) }.to_json }"
+= javascript_pack_tag "WelcomeModal"
 
 .dashboard
 
@@ -32,7 +34,7 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
         .balance-panel.align-items-center
           .row
             .col
-              .balance.px-4.pt-4
+              .balance.pt-4
                 .bat-logo#bat-logo
                   = image_tag("bat-logo@2x.png", class: "", width: 60, height: 60)
                 .amounts
