--- a/app/views/admin/publishers/edit.html.slim
+++ b/app/views/admin/publishers/edit.html.slim
@@ -12,23 +12,26 @@
     p Toggle settings on or off for this publisher.
 
     = form_for(@publisher, url: admin_publisher_path, method: :patch) do |f|
-      .form-group.border-bottom
+      .form-group.border-bottom.pb-2
         label
           = f.check_box :excluded_from_payout, {}, checked: @publisher.excluded_from_payout?
           = " Uphold widget disabled"
-      .form-group.border-bottom
+      .form-group.border-bottom.pb-2
         label
-          = f.check_box :wire_only, {}, checked: @publisher.wire_only?
-          = " Wire transfers only (also disables uphold and paypal widgets)"
-      .form-group.border-bottom
+          = f.check_box UserFeatureFlags::WIRE_ONLY, {}, checked: @publisher.wire_only?
+          = " Wire transfers only"
+        .text-dark This feature disables uphold and paypal widgets.
+      .form-group.border-bottom.pb-2
         label
-          = f.check_box :invoice, {}, checked: @publisher.invoice?
+          = f.check_box UserFeatureFlags::INVOICE, {}, checked: @publisher.invoice?
           = " Create invoices"
-      .form-group.border-bottom
+        .text-dark Provides the ability to create invoices. Users will still be paid out the base balance that they are owed.
+      .form-group.border-bottom.pb-2
         label
-          = f.check_box :merchant, {}, checked: @publisher.merchant?
+          = f.check_box UserFeatureFlags::MERCHANT, {}, checked: @publisher.merchant?
           = " Merchant Feature"
-      .form-group.border-bottom
+        .text-dark Enables the abililty to create API Keys to interact with SKUs
+      .form-group.border-bottom.pb-2
         label
           = f.check_box UserFeatureFlags::REFERRAL_KYC_REQUIRED, {}, checked: @publisher.referral_kyc_required?
           = " Referral KYC Required"
