Remove call to PublisherTransactionGetter

--- a/app/views/publishers/_paypal_connection_panel.html.slim
+++ b/app/views/publishers/_paypal_connection_panel.html.slim
@@ -16,22 +16,22 @@
         .payout-account-disconnect-button
           = link_to t(".disconnect"), paypal_connection_disconnect_path(@publisher.paypal_connection.id), method: :patch
       br
-  - if @publisher.paypal_connection.present? 
+  - if @publisher.paypal_connection.present?
     - if @publisher.paypal_connection.verified_account?
-      .dashboard-panel--content#last_settlement class=last_settlement_class(@publisher)
-        .last-deposit-v2.d-flex.justify-content-between
-          .last-deposit-v2--label
-            = t(".last_deposit")
-          .d-flex.justify-content-start.flex-column
-            - last_deposit_balance = publisher_last_settlement_bat_balance(@publisher)
-            - if last_deposit_balance == I18n.t("helpers.publisher.no_deposit")
-              div.last-deposit-v2--date
-                label = t(".no_deposit_made_yet")
-            - else
-              div.last-deposit-v2--amount
-                span = last_deposit_balance + " " + t(".bat_points")
-              div.last-deposit-v2--date
-                label = t(".last_deposit_date") + publisher_last_settlement_date(@publisher, params[:locale])
+      / .dashboard-panel--content#last_settlement class=last_settlement_class(@publisher)
+      /   .last-deposit-v2.d-flex.justify-content-between
+      /     .last-deposit-v2--label
+      /       = t(".last_deposit")
+      /     .d-flex.justify-content-start.flex-column
+      /       - last_deposit_balance = publisher_last_settlement_bat_balance(@publisher)
+      /       - if last_deposit_balance == I18n.t("helpers.publisher.no_deposit")
+      /         div.last-deposit-v2--date
+      /           label = t(".no_deposit_made_yet")
+      /       - else
+      /         div.last-deposit-v2--amount
+      /           span = last_deposit_balance + " " + t(".bat_points")
+      /         div.last-deposit-v2--date
+      /           label = t(".last_deposit_date") + publisher_last_settlement_date(@publisher, params[:locale])
     - else
       .dashboard-panel--content#last_settlement
         .last-deposit-v2.last-deposit-v2--no-payout-account
