Don't fetch extra information for the wallet
Closes #1719

--- a/app/views/browser_users/home.html.slim
+++ b/app/views/browser_users/home.html.slim
@@ -6,5 +6,5 @@
     .p-2
       = render partial: 'how_it_works', referral_code: @promo_registration
     .p-2
-      = render partial: 'pending_balance'
+      = render_async browser_users_pending_balance_path
       = render partial: 'promo_panel'
