--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -13,7 +13,6 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
     home_publishers_path, \
     class: 'title' \
   )
-
   - if @publisher.merchant?
     .mr-5= link_to(t('.merchant'), keys_path)
 
@@ -22,7 +21,6 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
 
 
 = hidden_field_tag 'publisher_id', @publisher.id
-
 
 .dashboard
 
@@ -33,7 +31,7 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
     .row
       .col.mb-4.payouts class="#{@publisher.no_grants? ? 'col-md-7' : '' }"
         = render_async home_balances_publishers_path do
-          h3 Loading balances...
+          .spinner-border.center.text-primary role="status"
       .col-md.mb-4
         .dashboard-panel--wrapper
           .dashboard-panel--header#publishers_statements
@@ -52,8 +50,12 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
       .col-md.mb-4
         - if !(@publisher.excluded_from_payout? || @publisher.paypal_locale?(params[:locale]) || @publisher.uphold_connection&.japanese_account? || @publisher.wire_only?)
           = render_async uphold_wallet_panel_publishers_path
+            div.spinner-border.text-primary role="status"
+              span.sr-only Loading...
         - elsif @publisher.paypal_locale?(params[:locale]) && !@publisher.wire_only?
           = render_async paypal_wallet_panel_publishers_path
+            div.spinner-border.text-primary role="status"
+              span.sr-only Loading...
       - if promo_running?
           = render partial: 'promo_panel'
       - elsif @publisher.channels.empty?
