--- a/app/views/admin/publishers/edit.html.slim
+++ b/app/views/admin/publishers/edit.html.slim
@@ -36,6 +36,11 @@
           = f.check_box UserFeatureFlags::REFERRAL_KYC_REQUIRED, {}, checked: @publisher.referral_kyc_required?
           = " Referral KYC Required"
         p.text-dark Enforces KYC for users to join the referral promo program.
+      .form-group.border-bottom.pb-2
+        label
+          = "Promo Expiration Date"
+        = date_field_tag('publisher[promo_expiration_time]', @publisher.promo_expiration_time&.strftime("%Y-%m-%d"), class: 'ml-2')
+        p.text-dark Sets the date when the publishers promo codes will no longer be active.
 
       .form-group
         = f.submit class: "btn btn-primary m-0"
