--- a/app/views/admin/publishers/show.html.slim
+++ b/app/views/admin/publishers/show.html.slim
@@ -118,12 +118,14 @@ hr
           hr
 
   .c-4.shadow-sm.bg-white.rounded.p-3.my-4
-    .panel
-      input type="checkbox" name="panels" id="panel_id"
-        label for="panel_id"
-          h3.text-dark Add Note
-      .panel-content
-        = render partial: 'admin/publisher_notes/form', locals: { note: PublisherNote.new, publisher: @publisher }
+    .accordion
+      .panel
+        input type="checkbox" name="panels" id="panel_id"
+          label.d-flex for="panel_id"
+            h3.text-dark Add Note
+            = fa_icon "comment-o lg", class: 'text-dark mt-2 ml-2'
+        .panel-content
+          = render partial: 'admin/publisher_notes/form', locals: { note: PublisherNote.new, publisher: @publisher }
 
 
   .c-4.shadow-sm.bg-white.rounded.p-3.my-4
