--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -120,7 +120,7 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
     - if !@publisher.only_user_funds? \
         && @publisher.promo_registrations.present? \
         && @publisher.promo_registrations.has_stats.select { |promo_registration| promo_registration.stats_by_date.present? }.present? \
-        && @publisher.promo_registrable? \
+        && @publisher.may_register_promo? \
         && @publisher.promo_not_expired?
       = render "publishers/referral_charts", current_publisher: @publisher
 
