--- a/app/views/admin/publishers/edit.html.slim
+++ b/app/views/admin/publishers/edit.html.slim
@@ -32,8 +32,8 @@
         p.text-dark Enforces KYC for users to join the referral promo program.
       .form-group.border-bottom.pb-2
         label
-          = "Promo Expiration Date"
-        = f.date_field(UserFeatureFlags::PROMO_LOCKOUT_TIME, value: @publisher.feature_flags[UserFeatureFlags::PROMO_LOCKOUT_TIME.to_s], class: 'ml-2')
+          = "Promo Lockout Time"
+        = f.date_field(UserFeatureFlags::PROMO_LOCKOUT_TIME, value: @publisher.promo_lockout_time, class: 'ml-2')
         p.text-dark Sets the date when the publishers promo codes will no longer be active.
 
       .form-group
