--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -121,7 +121,7 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
         && @publisher.promo_registrations.present? \
         && @publisher.promo_registrations.has_stats.select { |promo_registration| promo_registration.stats_by_date.present? }.present? \
         && @publisher.may_register_promo? \
-        && @publisher.promo_not_expired?
+        && @publisher.no_promo_lockout?
       = render "publishers/referral_charts", current_publisher: @publisher
 
     - @publisher.channels.visible.each do |channel|
