--- a/app/views/publishers/_promo_panel.html.slim
+++ b/app/views/publishers/_promo_panel.html.slim
@@ -1,25 +1,45 @@
-.col class="#{current_publisher.no_grants? ? 'col-md-5 mb-4' : 'mb-4' }"
-  - if current_publisher.promo_status(promo_running?) == :inactive
+- if current_publisher.promo_status(promo_running?) == :inactive
+  .col class="#{current_publisher.no_grants? ? 'col-md-5 mb-4' : 'mb-4' }"
     .promo-panel
       .promo-panel-item.promo-panel-item-info
         #promo-limited-time= t("promo.activate.sub_header_one")
         h3#promo-header= t("promo.activate.header")
         #promo-referring-fans= t("promo.activate.sub_header_two")
+
       .promo-panel-item.promo-panel-item-button
-        = form_for current_publisher, { method: :get, url: promo_registrations_path } do |f|
-          = f.submit(t("promo.activate.button-dashboard").upcase, class: "btn btn-primary", id: "activate-promo-dashboard-button" )
-  - elsif current_publisher.only_user_funds?
+        - if @publisher.may_register_promo? && !@publisher.promo_lockout_time_passed?
+          = link_to t("promo.activate.button-dashboard").upcase, promo_registrations_path, class: 'btn btn-primary', id: "activate-promo-dashboard-button"
+        - elsif !@publisher.valid_promo_country?
+          .promo-panel-item-alert
+            #promo-panel-alert
+              = t('promo.dashboard.restricted_country')
+        - else
+          .promo-panel-item-alert
+            #promo-panel-alert
+              = t('promo.dashboard.unpayable_notice')
+
+- elsif current_publisher.only_user_funds?
+  .col class="#{current_publisher.no_grants? ? 'col-md-5 mb-4' : 'mb-4' }"
     .promo-panel
       .promo-panel-item.promo-panel-item-alert
         #promo-panel-alert
           == t("promo.dashboard.violation")
 
-  - elsif current_publisher.has_verified_channel?
-    .promo-panel.h-100
-      .promo-flex-col.h-100#react-promo-panel data-props={publisherId: current_publisher.id}.to_json
-      = javascript_pack_tag('referrals/ReferralPanel')
+- elsif current_publisher.has_verified_channel?
+  - if @publisher.may_register_promo? && !@publisher.promo_lockout_time_passed?
+    .col class="#{current_publisher.no_grants? ? 'col-md-5 mb-4' : 'mb-4' }"
+      .promo-panel.h-100
+        .h-100
+          .promo-flex-col#react-promo-panel data-props={publisherId: @current_publisher.id}.to_json
+          = javascript_pack_tag('referrals/ReferralPanel')
+          - if @publisher.promo_lockout_time.present?
+            .promo-panel-item.promo-panel-item-alert
+              #promo-panel-alert
+                = t('promo.dashboard.expiration', time: distance_of_time_in_words_to_now(@publisher.promo_lockout_time))
 
-  - else
+
+- else
+  .col class="#{current_publisher.no_grants? ? 'col-md-5 mb-4' : 'mb-4' }"
     .promo-panel
       .promo-panel-item.promo-panel-item-alert
         #promo-panel-alert
