Show error screen when user isn't logged in

--- a/app/views/admin/errors/not_authorized.html.slim
+++ b/app/views/admin/errors/not_authorized.html.slim
@@ -13,8 +13,8 @@ html lang="en"
     content.page
       .container
         .box
-          =render("./admin/errors/construction.svg")
+          img src="https://brave.com/wp-content/uploads/2018/12/sadcloud-1.png"
         .box
-          h1 Check your IP Address
+          h1 Not authorized
         .box
-          h2 You might have forgotten to connect to a VPN or a secure connection.
+          h2 Maybe your session expired? Try <a href="/log-in" target="_blank">logging in</a> and refreshing this page.
