Update HTML Title

--- a/app/views/admin/errors/not_authorized.html.slim
+++ b/app/views/admin/errors/not_authorized.html.slim
@@ -5,7 +5,7 @@ html lang="en"
     meta content="width=device-width, initial-scale=1.0" name="viewport" /
     meta content="ie=edge" http-equiv="X-UA-Compatible" /
     = stylesheet_link_tag "admin/main"
-    title Check your IP Address
+    title Not authorized
   body
     header.header
       .logo
