--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -4,6 +4,7 @@ noscript
 - open_confirm_default_currency_modal = !flash[:taken_channel_id] && \
     @publisher.uphold_connection.uphold_verified? && @publisher.uphold_connection.status != UpholdConnection::PENDING && \
     (@publisher.uphold_connection.default_currency_confirmed_at.blank? || @publisher.uphold_connection.default_currency.blank?)
+
 script type="text/html" id="confirm_default_currency_modal_wrapper"
   = render partial: 'confirm_default_currency_modal', locals: { possible_currencies: @possible_currencies || []}
 
@@ -88,7 +89,6 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
                         span
                           == t('.held_funds_description')
 
-
       .col-md.mb-4
         .dashboard-panel--wrapper
           .dashboard-panel--header#publishers_statements
@@ -106,9 +106,10 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
     .row
       .col-md.mb-4
         - if !(@publisher.excluded_from_payout? || @publisher.paypal_locale?(params[:locale]) || @publisher.uphold_connection&.japanese_account? || @publisher.wire_only?)
-          = render partial: "uphold_wallet_panel"
+          = render partial: 'wallet_services'
         - elsif @publisher.paypal_locale?(params[:locale]) && !@publisher.wire_only?
           = render partial: "paypal_connection_panel"
+
       - if promo_running?
           = render partial: 'promo_panel'
       - elsif @publisher.channels.empty?
