--- a/app/views/publishers/settings/index.html.slim
+++ b/app/views/publishers/settings/index.html.slim
@@ -26,15 +26,15 @@
 
     - unless @publisher.paypal_locale?(params[:locale])
       hr
-      = form_with(model: @publisher.uphold_connection, html: { id: "update_send_email_form", class: 'mt-4' }) do |f|
+      = form_with(model: @publisher.uphold_connection, url: connection_uphold_connection_path, html: { id: "update_send_email_form", class: 'mt-4' }) do |f|
         label.d-block= t('.email.snooze')
-        - if @publisher.uphold_connection&.send_emails == UpholdConnection::FOREVER_DATE
+        - if snoozed_forever?(@publisher)
           - selected = :forever
-        - elsif @publisher.uphold_connection&.send_emails > DateTime.now
+        - elsif snoozed_for_year?(@publisher)
           - selected = :next_year
 
         = select_tag :send_emails, options_for_select([[t('.email.options.until_next_year'), :next_year],[t('.email.options.forever'), :forever]], selected), include_blank: true
-        - if @publisher.uphold_connection&.send_emails > DateTime.now && @publisher.uphold_connection&.send_emails != UpholdConnection::FOREVER_DATE
+        - if !snoozed_forever?(@publisher) && snoozed_for_year?(@publisher)
           #snoozeDetails.mt-2.font-italic.text-muted
             =t('.email.snoozed_until', date: @publisher.uphold_connection&.send_emails&.strftime("%Y-%m-%d"))
 
